Added EC2 deployment configuration and updated values in JUnit entity mapping test

--- a/GuitarShopper/build.gradle
+++ b/GuitarShopper/build.gradle
@@ -4,6 +4,16 @@ plugins {
 	id 'java'
 }
 
+apply plugin: 'war'
+war {
+  enabled = true
+  // Gradle will replace the variable baseName
+  // with our app name, as defined in settings.gradle
+  archiveName = "${baseName}.war"
+  destinationDir = file("../")         // Project root directory
+}
+
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
@@ -13,7 +23,8 @@ repositories {
 }
 
 dependencies {
-
+	
+	implementation ('org.springframework.boot:spring-boot-starter-tomcat')
 	compile project(':JPAGuitars')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
